Fix whitespacing

--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -1,16 +1,16 @@
 .lf-btn {
-  .btn;
+    .btn();
 }
 
 .lf-btn-default {
-  .lf-button-variant(@btn-default-color; @btn-default-bg; @btn-default-border; 15%);
+    .lf-button-variant(@btn-default-color; @btn-default-bg; @btn-default-border; 15%);
 }
 .lf-btn-primary {
-  .lf-button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-border; 30%);
+    .lf-button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-border; 30%);
 }
 // Warning appears as orange
 .lf-btn-warning {
-  .lf-button-variant(@btn-warning-color; @btn-warning-bg; @btn-warning-border; 30%);
+    .lf-button-variant(@btn-warning-color; @btn-warning-bg; @btn-warning-border; 30%);
 }
 // Danger and error appear as red
 .lf-btn-danger {
@@ -32,26 +32,26 @@
 .lf-btn-link {
     .lf-btn-default;
 
-  background: transparent;
-  border: 1px solid transparent;
+    background: transparent;
+    border: 1px solid transparent;
 }
 
 // Button Sizes
 // --------------------------------------------------
 
 .lf-btn-lg {
-    .btn-lg;
+    .btn-lg();
 }
 .lf-btn-sm {
-    .btn-sm;
+    .btn-sm();
 }
 .lf-btn-xs {
-    .btn-xs;
+    .btn-xs();
 }
 
 // Block button
 // --------------------------------------------------
 
 .lf-btn-block {
-    .btn-block;
+    .btn-block();
 }
